--- a/Readme
+++ b/Readme
@@ -1,3 +1,5 @@
+An empty template built with React, webapck4 and babel7
+
 https://medium.freecodecamp.org/how-to-use-reactjs-with-webpack-4-babel-7-and-material-design-ff754586f618
 
 This is the tutorial referenced by this template, which has detailed construction steps.
